[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "porthawk"
version = "0.1.0"
description = "An educational TCP port scanner for authorized targets only"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
porthawk = "porthawk.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
# Force compat editable mode: generates a simple .pth file instead of a
# dynamic meta-path finder. Required for Python 3.14+ where .pth files
# containing `import` statements are no longer executed (PEP 765).
editable-mode = "compat"
